examples/test/testpolicy8308.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8308
  namespace: namespace309
spec:
  podSelector:
    matchLabels:
      key19: value24
      key44: value14
      key28: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value15
      podSelector:
        matchLabels:
          key27: value22
          key2: value0
          key37: value39
